--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SYMBIAN_PROJECT</string>
-    <string name="cadastroUsuarioTitulo">CADASTRO</string>
+    <string name="cadastroUsuarioTitulo">CADASTRO DE USUÁRIO</string>
     <string name="txtNome">NOME</string>
     <string name="txtSobreNome">SOBRENOME</string>
     <string name="txtEmail">EMAIL</string>
@@ -12,4 +12,9 @@
     <string name="mensagem_cadastro_usuario">VOCÊ ETÁ CADASTRANDO UM USUÁRIO</string>
     <string name="salvar">SALVAR</string>
     <string name="cancelar">CANCELAR</string>
+    <string name="cadastroEnderecoTitulo">CADASTRO DE ENDEREÇO</string>
+    <string name="txtCep">CEP</string>
+    <string name="txtNumero">NÚMERO</string>
+    <string name="txtComplemento">COMPLEMENTO</string>
+    <string name="cadastrarEndereco">CADASTRAR</string>
 </resources>
